[tool.poetry]
name = "mysite"
version = "0.1.0"
description = ""
authors = ["PrinceJetro <adegbuyijephthah@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
